Add PDF download links to all protocol footers
- Add Download PDF Version button to all 17 protocol pages
- Button links to corresponding PDF in pdf_versions/ folder
- Styled with theme-appropriate colors matching each protocol
- Added to footer with hover effects for better UX
- Centered footer layout for improved visual consistency

Updated protocols:
- Western Blot (purple theme)
- RNA Isolation and cDNA Synthesis (blue theme)
- CellTiter-Fluor Assay (indigo theme)
- Mouse Genotyping (blue theme)
- Cell Culture (green theme)
- BODIPY Staining (orange theme)
- Hepatocyte Isolation (teal theme)
- Soft Agar Assay (indigo theme)
- Lentivirus Production (violet theme)
- Astrocyte Isolation (cyan theme)
- Neural Progenitor Culture (fuchsia theme)
- H&E Staining (pink theme)
- Immunofluorescence (purple theme)
- Immunohistochemistry (purple theme)
- Delta Ct Calculation (blue theme)
- Seahorse Mito Stress Test (cyan theme)
- Recipes & Reagents (emerald theme)

All protocols now provide easy access to printable PDF versions

--- a/immunohistochemistry.html
+++ b/immunohistochemistry.html
@@ -1067,6 +1067,11 @@
                 <div class="border-t border-gray-700 mt-8 pt-6 text-center text-sm">
                     <p>For Research Use Only. Last updated: October 2025</p>
                 </div>
+                            <div class="mt-4">
+                    <a href="pdf_versions/immunohistochemistry.pdf" download class="inline-block bg-purple-600 hover:bg-purple-700 text-white px-6 py-2 rounded-lg text-sm font-semibold transition">
+                        📄 Download PDF Version
+                    </a>
+                </div>
             </div>
         </footer>
     </div>
