--- a/mouse-genotyping.html
+++ b/mouse-genotyping.html
@@ -1658,6 +1658,11 @@
                 <div class="border-t border-gray-700 mt-8 pt-6 text-center text-sm">
                     <p>For Research Use Only. Last updated: October 2025</p>
                 </div>
+                            <div class="mt-4">
+                    <a href="pdf_versions/mouse-genotyping.pdf" download class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg text-sm font-semibold transition">
+                        📄 Download PDF Version
+                    </a>
+                </div>
             </div>
         </footer>
     </div>
