--- a/recipes.html
+++ b/recipes.html
@@ -178,9 +178,14 @@
 
         <!-- Footer -->
         <footer class="bg-gray-800 text-gray-300 py-6 mt-12">
-            <div class="container mx-auto px-4">
+            <div class="container mx-auto px-4 text-center">
                 <p class="text-sm">Consolidated recipes from Dasgupta Lab protocols</p>
                 <p class="text-sm mt-2">For Research Use Only | Compiled by Roman | October 2025</p>
+                <div class="mt-4">
+                    <a href="pdf_versions/recipes.pdf" download class="inline-block bg-emerald-600 hover:bg-emerald-700 text-white px-6 py-2 rounded-lg text-sm font-semibold transition">
+                        📄 Download PDF Version
+                    </a>
+                </div>
                 <div class="mt-4 flex flex-col gap-2 text-sm">
                     <a href="index.html" class="text-green-400 hover:text-green-300">← Back to Protocol Index</a>
                     <a href="Product_Sheets_List.md" class="text-green-400 hover:text-green-300 flex items-center gap-2">
