--- a/seahorse-mito-stress-test.html
+++ b/seahorse-mito-stress-test.html
@@ -1101,6 +1101,11 @@
                 <p class="text-sm">Dasgupta lab protocols; compiled and adapted by Roman</p>
                 <p class="text-xs text-gray-400 mt-2">Emory University</p>
                 <div class="mt-4">
+                    <a href="pdf_versions/seahorse-mito-stress-test.pdf" download class="inline-block bg-cyan-600 hover:bg-cyan-700 text-white px-6 py-2 rounded-lg text-sm font-semibold transition">
+                        📄 Download PDF Version
+                    </a>
+                </div>
+                <div class="mt-4">
                     <a href="index.html" class="text-cyan-400 hover:text-cyan-300 text-sm">← Back to Protocol Index</a>
                 </div>
             </div>
