--- a/cell-culture.html
+++ b/cell-culture.html
@@ -987,10 +987,15 @@
 
         <!-- Footer -->
         <footer class="bg-gray-800 text-gray-300 py-6 mt-12">
-            <div class="container mx-auto px-4">
+            <div class="container mx-auto px-4 text-center">
                 <p class="text-sm">Protocol compiled from online resources and best practices</p>
                 <p class="text-sm mt-2">For Research Use Only | Last updated: January 2025</p>
-                <p class="text-sm mt-2"><a href="index.html" class="text-blue-400 hover:text-blue-300">← Back to Protocol Index</a></p>
+                <div class="mt-4">
+                    <a href="pdf_versions/cell-culture.pdf" download class="inline-block bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg text-sm font-semibold transition">
+                        📄 Download PDF Version
+                    </a>
+                </div>
+                <p class="text-sm mt-4"><a href="index.html" class="text-blue-400 hover:text-blue-300">← Back to Protocol Index</a></p>
             </div>
         </footer>
     </div>
